# billboard.hot100

./: .env.example  .gitignore  README.md  implementation-prompt.md  llm-retry-prompt.md  prompt-cron.md  prompt-initial.md  pyproject.toml
.github/workflows/: sync.yml
billboard_sync/: billboard.py  billboard_to_ytmusic_sync.py  llm_matcher.py  matcher.py  ytmusic.py
tests/: test_billboard_parser.py  test_description.py  test_llm_matcher.py  test_matcher.py
tests/fixtures/: billboard_sample_20260509.html
