[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "billboard-to-ytmusic-sync"
version = "0.1.0"
description = "Sync the Billboard Hot 100 to a YouTube Music playlist."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ytmusicapi>=1.7.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
billboard-to-ytmusic-sync = "billboard_sync.billboard_to_ytmusic_sync:main"

[tool.setuptools.packages.find]
include = ["billboard_sync*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
